mType/tests/testFiles/error/pass/basicErrorReportingValid.mt
// Valid code that should not produce errors
int x = 10;
string msg = "valid string";
print(msg);
print(x);
print("Test passed");